Trying to shorten answer with context

--- a/ChatGPT_API_in_Python_=_Colab_Page.ipynb
+++ b/ChatGPT_API_in_Python_=_Colab_Page.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQPTj6VE9TR+UvjIEAxd2C"
+      "authorship_tag": "ABX9TyMTaDiUUzs/Bued9yoa9Arx"
     },
     "kernelspec": {
       "name": "python3",
@@ -80,12 +80,12 @@
     {
       "cell_type": "code",
       "source": [
-        "openai.api_key = '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'"
+        "openai.api_key = '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'"
       ],
       "metadata": {
         "id": "yrD55ZesnDL9"
       },
-      "execution_count": null,
+      "execution_count": 30,
       "outputs": []
     },
     {
@@ -141,19 +141,51 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 445
+          "height": 1000
         },
         "id": "sIolDeGOnwut",
-        "outputId": "30a1b753-4a4f-43c3-afd8-d6382f11fcb7"
+        "outputId": "bddab13a-b131-4148-9b88-9478f6c90f16"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "User : have you ever seen a potato\n",
-            "ChatGPT: As an AI language model, I don't have the ability to see physical things like a potato. However, I understand what a potato is and its common usage as a starchy vegetable that can be cooked and enjoyed in a variety of dishes.\n"
+            "User : hi\n",
+            "ChatGPT: Hello! How can I assist you today?\n",
+            "User : i forgot my name\n",
+            "ChatGPT: I'm sorry to hear that you forgot your name. If you are unable to recall your name, you could try checking your ID card, driver's license, passport, or any official documents that may contain your name. Alternatively, you might also check with someone who knows you well and can remind you of your name. If you continue to have trouble remembering your name, it may be worth consulting a medical professional.\n",
+            "User : how?\n",
+            "ChatGPT: If you're having difficulties remembering your name or other personal information, it might be a good idea to schedule an appointment with a healthcare provider or a specialist, such as a neurologist or a neuropsychologist, who can assess your condition and determine the best course of action. They may perform various tests, such as psychological tests, neurological exams, or brain imaging, to identify any underlying medical or psychological conditions that may be affecting your memory. They can also provide recommendations on any necessary treatment, therapy, or lifestyle changes to help improve your memory and overall cognitive functioning.\n",
+            "User : can you explain that in the absolute fewest words possible?\n",
+            "ChatGPT: If you're having trouble remembering your name, you should speak to a doctor who can run tests to determine if there are any medical or psychological conditions that could be causing the issue. They can also recommend treatments or lifestyle changes to improve your memory.\n",
+            "User : too many words\n",
+            "ChatGPT: See a doctor if you can't remember your name.\n",
+            "User : whats a doctor?\n",
+            "ChatGPT: A doctor is a licensed medical professional who is trained and qualified to diagnose, treat and prevent illnesses, injuries, and diseases. They may work in hospitals, clinics, private practices, or in research and academia. Doctors may specialize in a specific field of medicine, such as cardiology, orthopedics, neurology, or gynecology. They usually have a degree in medicine, spend years in residency training to gain the necessary knowledge and skills for their specialty, and undergo periodic continuing education to stay up-to-date with the latest medical advancements.\n",
+            "User : please use the fewest number of words\n",
+            "ChatGPT: A doctor is a medical professional who diagnoses, treats, and prevents illnesses.\n",
+            "User : fewer\n",
+            "ChatGPT: Doctor treats illnesses.\n",
+            "User : all illnesses?\n",
+            "ChatGPT: Doctors can treat a variety of illnesses, but depending on their specialization, they may focus on treating specific areas or conditions. Some doctors, such as family physicians or general practitioners, provide primary care for a wide range of medical issues, while others, such as cardiologists or obstetricians, specialize in diagnosing and treating a specific type of illness or condition.\n",
+            "User : going forward keep all answers to 10 words or less\n",
+            "ChatGPT: Understood. I will keep my responses brief and to the point from now on.\n",
+            "User : whats an illness?\n",
+            "ChatGPT: Illness is a health condition that causes physical or mental discomfort.\n",
+            "User : write a poem about doctors\n",
+            "ChatGPT: Here's a short poem about doctors:\n",
+            "\n",
+            "Doctors with their steady hands and knowing eyes,\n",
+            "Bringing healing where there was once only sighs.\n",
+            "With science and empathy, they ease our fears,\n",
+            "Patiently tending to our bodies and our tears.\n",
+            "User : thats way more than 10 words\n",
+            "ChatGPT: Apologies! Here's a shorter version:\n",
+            "\n",
+            "Doctors mend our bodies and souls,\n",
+            "With steady hands and caring hearts.\n"
           ]
         },
         {
@@ -163,7 +195,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-29-23993358dd39>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mmessage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"User : \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmessage\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         messages.append(\n\u001b[1;32m      5\u001b[0m             \u001b[0;34m{\u001b[0m\u001b[0;34m\"role\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"user\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"content\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mmessage\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-31-23993358dd39>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mwhile\u001b[0m \u001b[0;32mTrue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mmessage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"User : \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mmessage\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m         messages.append(\n\u001b[1;32m      5\u001b[0m             \u001b[0;34m{\u001b[0m\u001b[0;34m\"role\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"user\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"content\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mmessage\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    858\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    859\u001b[0m             )\n\u001b[0;32m--> 860\u001b[0;31m         return self._input_request(str(prompt),\n\u001b[0m\u001b[1;32m    861\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    862\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    902\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    903\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 904\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    905\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    906\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
